--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==2.0.3
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
 greenlet==1.1.2
 gunicorn==20.1.0
 isort==5.10.1
@@ -27,3 +28,4 @@ tomli==2.0.1
 typing_extensions==4.1.1
 Werkzeug==2.0.3
 wrapt==1.14.0
+WTForms==3.0.1
