--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.7.7
 astroid==2.11.1
 click==8.0.4
 dill==0.3.4
+Faker==13.3.4
 Flask==2.0.3
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
@@ -22,7 +23,9 @@ pylint==2.13.0
 pylint-flask==0.6
 pylint-flask-sqlalchemy==0.2.0
 pylint-plugin-utils==0.7
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+six==1.16.0
 SQLAlchemy==1.4.32
 tomli==2.0.1
 typing_extensions==4.1.1
