--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 alembic==1.7.7
 astroid==2.11.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.0.4
+defusedxml==0.7.1
 dill==0.3.4
 Faker==13.3.4
 Flask==2.0.3
@@ -10,6 +13,8 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
 gunicorn==20.1.0
+httpie==3.1.0
+idna==3.3
 isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.1
@@ -17,18 +22,24 @@ lazy-object-proxy==1.7.1
 Mako==1.2.0
 MarkupSafe==2.1.1
 mccabe==0.7.0
+multidict==6.0.2
 platformdirs==2.5.1
 psycopg2-binary==2.9.3
+Pygments==2.11.2
 pylint==2.13.0
 pylint-flask==0.6
 pylint-flask-sqlalchemy==0.2.0
 pylint-plugin-utils==0.7
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+requests==2.27.1
+requests-toolbelt==0.9.1
 six==1.16.0
 SQLAlchemy==1.4.32
 tomli==2.0.1
 typing_extensions==4.1.1
+urllib3==1.26.9
 Werkzeug==2.0.3
 wrapt==1.14.0
 WTForms==3.0.1
