--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.7.7
+aniso8601==9.0.1
 astroid==2.11.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -8,7 +9,9 @@ dill==0.3.4
 Faker==13.3.4
 Flask==2.0.3
 Flask-Login==0.5.0
+flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
@@ -21,8 +24,11 @@ Jinja2==3.1.1
 lazy-object-proxy==1.7.1
 Mako==1.2.0
 MarkupSafe==2.1.1
+marshmallow==3.15.0
+marshmallow-sqlalchemy==0.28.0
 mccabe==0.7.0
 multidict==6.0.2
+packaging==21.3
 platformdirs==2.5.1
 psycopg2-binary==2.9.3
 Pygments==2.11.2
@@ -30,9 +36,11 @@ pylint==2.13.0
 pylint-flask==0.6
 pylint-flask-sqlalchemy==0.2.0
 pylint-plugin-utils==0.7
+pyparsing==3.0.8
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
 requests==2.27.1
 requests-toolbelt==0.9.1
 six==1.16.0
