--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.7.7
 aniso8601==9.0.1
 astroid==2.11.1
 certifi==2021.10.8
@@ -9,6 +10,7 @@ Faker==13.4.0
 Flask==2.0.3
 Flask-Login==0.5.0
 flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
