--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ defusedxml==0.7.1
 dill==0.3.4
 Faker==13.4.0
 Flask==2.0.3
+Flask-HTTPAuth==4.6.0
 Flask-Login==0.5.0
 flask-marshmallow==0.14.0
 Flask-Migrate==3.1.0
